--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.3",
+    "@material-ui/lab": "^4.0.0-alpha.43",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.2.3",
+    "react-places-autocomplete": "^7.2.1",
     "react-scripts": "3.4.0"
   },
   "scripts": {
