--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "client": "cd client && npm run start",
-    "server": "nodemon server.js",
+    "server": "fuser -k 5000/tcp && nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
@@ -11,7 +11,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "geolib": "^3.2.1",
+    "nodemon": "^2.0.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
