--- a/package.json
+++ b/package.json
@@ -3,20 +3,12 @@
   "version": "1.0.0",
   "scripts": {
     "client": "cd client && npm run start",
-    "server": "nodemon server.js",
+    "server": "cd server && npm run start",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "start": "node server.js",
+    "start": "node server/server.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "geolib": "^3.2.1",
-    "nodemon": "^2.0.4",
-    "request": "^2.88.2"
-  },
-  "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^5.2.0"
   }
 }
