--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "server": "cd server && npm run start",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start": "node server/server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build && cd ../server && npm install"
   },
   "dependencies": {
     "concurrently": "^5.2.0"
