--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "popspots-challenge",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.17.1"
+  },
   "scripts": {
     "client": "cd client && npm run start",
     "server": "cd server && npm run start",
