--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,9 @@
   "name": "popspots-challenge-client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.17.1"
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.3",
     "@material-ui/lab": "^4.0.0-alpha.43",
